// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render color 1`] = `
<div
  class="wp-components-view wp-components-icon css-1er9l8p"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-icon css-7if08q"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;

exports[`props should render size 1`] = `
<div
  class="wp-components-view wp-components-icon css-evr6ly"
  data-g2-c16t="true"
  data-g2-component="Icon"
>
  <svg />
</div>
`;
